--- a/profile.html
+++ b/profile.html
@@ -2,61 +2,310 @@
 <html lang="ar" dir="rtl">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>الملف الشخصي</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="profile.css">
-    <link href="Cairo-Regular.ttf" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <title>الملف الشخصي | SchoolX</title>
+
+    <!-- الأيقونات والخطوط -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+
+    <style>
+        :root {
+            --gold: #d4af37;
+            --gold-dark: #b8972e;
+            --dark: #0f1419;
+            --navy: #182c47;
+            --light: #f8f9fa;
+            --gray: #ecf0f1;
+        }
+
+        * { margin:0; padding:0; box-sizing:border-box; }
+        body {
+            font-family: 'Cairo', sans-serif;
+            background: var(--dark);
+            color: #fff;
+            min-height: 100vh;
+            padding-bottom: 100px;
+        }
+
+        .container {
+            max-width: 600px;
+            margin: 0 auto;
+            background: linear-gradient(135deg, #182c47 0%, #0f1419 100%);
+            min-height: 100vh;
+            position: relative;
+            overflow-x: hidden;
+        }
+
+        header {
+            background: var(--navy);
+            padding: 25px 20px;
+            text-align: center;
+            border-bottom: 6px solid var(--gold);
+            box-shadow: 0 10px 30px rgba(0,0,0,0.5);
+        }
+
+        .logo {
+            width: 90px;
+            height: 90px;
+            border: 5px solid var(--gold);
+            border-radius: 50%;
+            padding: 8px;
+            background: white;
+            box-shadow: 0 0 30px rgba(212,175,55,0.6);
+        }
+
+        header h1 {
+            color: var(--gold);
+            font-size: 2rem;
+            margin-top: 12px;
+            text-shadow: 0 0 15px rgba(212,175,55,0.5);
+        }
+
+        .profile-card {
+            background: white;
+            margin: 20px;
+            border-radius: 25px;
+            overflow: hidden;
+            box-shadow: 0 15px 40px rgba(0,0,0,0.4);
+            color: #2c3e50;
+        }
+
+        .profile-header {
+            background: linear-gradient(135deg, var(--gold), var(--gold-dark));
+            color: white;
+            padding: 25px;
+            text-align: center;
+        }
+
+        .profile-header h2 {
+            font-size: 1.8rem;
+            margin-bottom: 8px;
+        }
+
+        #admin-badge {
+            font-size: 2rem;
+            animation: pulse 2s infinite;
+        }
+
+        @keyframes pulse {
+            0% { transform: scale(1); }
+            50% { transform: scale(1.2); }
+            100% { transform: scale(1); }
+        }
+
+        .progress-section {
+            padding: 25px;
+            text-align: center;
+            background: #f8f9fa;
+        }
+
+        .progress-section label {
+            font-weight: bold;
+            color: var(--navy);
+            font-size: 1.1rem;
+            margin-bottom: 12px;
+            display: block;
+        }
+
+        progress {
+            width: 100%;
+            height: 28px;
+            border-radius: 14px;
+            background: #ddd;
+            overflow: hidden;
+            border: 3px solid var(--gold);
+        }
+
+        progress::-webkit-progress-value {
+            background: linear-gradient(90deg, var(--gold-dark), var(--gold));
+        }
+
+        progress::-moz-progress-bar {
+            background: linear-gradient(90deg, var(--gold-dark), var(--gold));
+        }
+
+        #progress-percentage {
+            margin-top: 12px;
+            font-size: 1.8rem;
+            font-weight: bold;
+            color: var(--gold);
+            text-shadow: 0 0 10px rgba(212,175,55,0.4);
+        }
+
+        .form-section {
+            padding: 30px 25px;
+        }
+
+        .input-group {
+            margin-bottom: 22px;
+        }
+
+        .input-group label {
+            display: block;
+            margin-bottom: 8px;
+            font-weight: bold;
+            color: var(--navy);
+        }
+
+        .input-group input,
+        .input-group textarea {
+            width: 100%;
+            padding: 16px 20px;
+            border: 3px solid var(--gold);
+            border-radius: 18px;
+            font-size: 1.1rem;
+            background: #fdfdfd;
+            transition: all 0.4s;
+            font-family: 'Cairo', sans-serif;
+        }
+
+        .input-group input:focus,
+        .input-group textarea:focus {
+            outline: none;
+            border-color: var(--navy);
+            box-shadow: 0 0 25px rgba(24,44,71,0.2);
+            transform: scale(1.02);
+        }
+
+        .input-group input[disabled] {
+            background: #f0f0f0;
+            color: #666;
+            cursor: not-allowed;
+        }
+
+        .submit-btn {
+            width: 100%;
+            padding: 18px;
+            background: linear-gradient(90deg, var(--gold), var(--gold-dark));
+            color: var(--navy);
+            border: none;
+            border-radius: 20px;
+            font-size: 1.3rem;
+            font-weight: bold;
+            cursor: pointer;
+            margin-top: 20px;
+            box-shadow: 0 10px 30px rgba(212,175,55,0.5);
+            transition: all 0.4s;
+        }
+
+        .submit-btn:hover {
+            background: var(--navy);
+            color: var(--gold);
+            transform: translateY(-5px);
+            box-shadow: 0 15px 40px rgba(24,44,71,0.6);
+        }
+
+        /* النافبار الفخم زي الشات بوت */
+        #nav-bar {
+            position: fixed;
+            bottom: 0;
+            left: 50%;
+            transform: translateX(-50%);
+            width: 100%;
+            max-width: 600px;
+            background: var(--navy);
+            padding: 16px 0;
+            border-top: 6px solid var(--gold);
+            display: flex;
+            justify-content: space-around;
+            align-items: center;
+            box-shadow: 0 -10px 40px rgba(0,0,0,0.6);
+            z-index: 9999;
+        }
+
+        #nav-bar a {
+            color: var(--gold);
+            font-size: 1.9rem;
+            padding: 12px;
+            transition: all 0.3s;
+            position: relative;
+        }
+
+        #nav-bar a.active {
+            color: white;
+            transform: scale(1.4);
+        }
+
+        #nav-bar a.active::after {
+            content: '';
+            position: absolute;
+            bottom: -10px;
+            left: 50%;
+            transform: translateX(-50%);
+            width: 8px;
+            height: 8px;
+            background: var(--gold);
+            border-radius: 50%;
+            box-shadow: 0 0 20px var(--gold);
+        }
+    </style>
 </head>
 <body>
-    <div class="container">
-        <nav id="nav-bar" class="nav-bar"></nav>
-        <section class="profile-section">
-            <h2>الملف الشخصي</h2>
-            <div class="profile-header">
-                <h3 id="user-name"></h3>
-                <span id="admin-badge" style="display: none;"><i class="fas fa-crown"></i></span>
-            </div>
-            <div class="progress-container">
-                <label for="profile-progress">نسبة اكتمال الملف:</label>
-                <progress id="profile-progress" value="0" max="100"></progress>
-                <span id="progress-percentage">0%</span>
-            </div>
+
+<div class="container">
+    <header>
+        <img src="logo.png" alt="شعار المدرسة" class="logo">
+        <h1>الملف الشخصي</h1>
+    </header>
+
+    <div class="profile-card">
+        <div class="profile-header">
+            <h2 id="user-name">جاري التحميل...</h2>
+            <span id="admin-badge" style="display:none;">Crown</span>
+        </div>
+
+        <div class="progress-section">
+            <label>نسبة اكتمال الملف الشخصي</label>
+            <progress id="profile-progress" value="0" max="100"></progress>
+            <div id="progress-percentage">0%</div>
+        </div>
+
+        <div class="form-section">
             <form id="profile-form">
                 <div class="input-group">
-                    <label for="full-name">الاسم الكامل</label>
+                    <label>الاسم الكامل</label>
                     <input type="text" id="full-name" disabled>
                 </div>
                 <div class="input-group">
-                    <label for="username">اسم المستخدم</label>
+                    <label>اسم المستخدم</label>
                     <input type="text" id="username" disabled>
                 </div>
                 <div class="input-group">
-                    <label for="email">البريد الإلكتروني</label>
-                    <input type="email" id="email">
+                    <label>البريد الإلكتروني</label>
+                    <input type="email" id="email" placeholder="example@school.com">
                 </div>
                 <div class="input-group">
-                    <label for="phone">رقم الهاتف</label>
-                    <input type="tel" id="phone">
+                    <label>رقم الهاتف</label>
+                    <input type="tel" id="phone" placeholder="010xxxxxxxx">
                 </div>
                 <div class="input-group">
-                    <label for="birthdate">تاريخ الميلاد</label>
+                    <label>تاريخ الميلاد</label>
                     <input type="date" id="birthdate">
                 </div>
                 <div class="input-group">
-                    <label for="address">العنوان</label>
-                    <input type="text" id="address">
+                    <label>العنوان</label>
+                    <input type="text" id="address" placeholder="المدينة - الحي - الشارع">
                 </div>
                 <div class="input-group">
-                    <label for="bio">السيرة الذاتية</label>
-                    <textarea id="bio" rows="4"></textarea>
+                    <label>السيرة الذاتية (اختياري)</label>
+                    <textarea id="bio" rows="4" placeholder="حكيلنا عن نفسك..."></textarea>
                 </div>
-                <button type="submit" class="submit-btn">حفظ التغييرات</button>
+
+                <button type="submit" class="submit-btn">
+                    حفظ التغييرات
+                </button>
             </form>
-        </section>
+        </div>
     </div>
-    <script src="crypto-js.js"></script>
-    <script src="dataManager.js"></script>
-    <script src="profile.js"></script>
+
+    <!-- النافبار هنا بالجافا سكريبت -->
+    <nav id="nav-bar"></nav>
+</div>
+
+<!-- Toastify + profile.js -->
+<script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+<script src="profile.js"></script>
 </body>
 </html>
